Fixed text wrapping issues on home

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -324,6 +324,7 @@ ion-list.toggle-section .toggle-section-content {
 		min-height: 1.5rem !important;
 	}
 	ion-card-header{
+		//white-space: normal;
 		font-size: 2.6rem !important;
 		font-weight: 500 !important;
 	}
@@ -331,4 +332,8 @@ ion-list.toggle-section .toggle-section-content {
 		margin-top: 0px !important;
 		margin-bottom: 6px !important;
 	}
+}
+
+ion-card-header{
+	white-space: normal !important;
 }
